# wikipedia_categorization

./: .gitignore  README.md  main.py  pyproject.toml  tech_list_5.0.csv  tech_list_5.0_ids.csv  tech_pages_v3.0.csv  wiki_categories_tree.html
data/input/: final_categories.json  final_categories_filtered.json
data/output/: results.db  target_categories.json  technical_subfields.json
data/user_outputs/: tech_list_5.0_ids.json  tech_pages_v3.0.json
documentation/: wiki_categories_tree.html
notebooks/: sandbox.ipynb
src/: BFS.py  create_target_categories.py  finding_categories.py  get_page_ids_from_titles.py  get_target_categories.py
src/utils/: sql_parser.py
